Fixes spacing

--- a/src/components/section.module.scss
+++ b/src/components/section.module.scss
@@ -13,7 +13,7 @@
 	}
 }
 .articleHeading {
-	margin: 10px 0 0;
+	margin: 30px 0 0;
 	a {
 		color: black;
 		text-decoration: none;
